Default data remove

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <div id="am-pm" class="digit-box"></div>
 
         <div id="date-box">
-            <p id="day">Wednesday</p>
+            <p id="day"></p>
             <div id="date-day">
-            <p id="date">20</p>
-            <p id="month">Fep</p>
-            <p id="year">2124</p>
+            <p id="date"></p>
+            <p id="month"></p>
+            <p id="year"></p>
             </div>
         </div>
     </div>
