--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital Clock</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="clock.png">
+    <link rel="icon" href="clock2.png">
 </head>
 <body>
     <div id="clock-box">
